--- a/tasksection.html
+++ b/tasksection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tasks</title>
     <style>
         html{
             width: 100%;
@@ -17,6 +17,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         body{
+            height: 92%;
             margin: 0px;
 
             margin-top: -20px;
@@ -24,6 +25,7 @@
     </style>
     <!--CSS link section-->
     <link rel="stylesheet" href="CSS/nav1.css">
+    <link rel="stylesheet" href="CSS/nav2.css">
     <link rel="stylesheet" href="CSS/namechange.css">
 </head>
 <body>
@@ -40,7 +42,11 @@
     </nav>
 
     <!--Navigation bar 2-->
-    
+    <nav class="nav2" id="nav2">
+            <a href="tasksection.html">Tasks</a><hr>
+            <a href="completedtasksection.html">Completeted tasks</a><hr>
+            <a href="FocusSection.html">Focus</a><hr>
+    </nav>
 
     <!--For name changing feature-->
     <div class="overview">
