Final commit from 10/18/2025

--- a/FocusSection.html
+++ b/FocusSection.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="CSS/nav1.css">
     <link rel="stylesheet" href="CSS/nav2.css">
     <link rel="stylesheet" href="CSS/namechange.css">
-    <link rel="stylesheet" href="CSS/focussection.css">
+    <link rel="stylesheet" href="focussection.css">
 </head>
 <body>
     <!--Navigation space-->
@@ -69,9 +69,21 @@
         </div>
         <!--The Focus Section-->
         <div class="focussection">
+            <div class="stopwatchsection">
+                <h1>00</h1>
+                <h1>00</h1>
+            </div>
+            <div class="function">
+                <button id="start">Start</button>
+                <button id="end">End</button>
+            </div>
+            <img src="Images/share.png" alt="" class="maximize">
+            <img src="Images/minimize-sign.png" alt="" class="minimize">
         </div>
     </div>
     <!--Script calling space:-->
     <script src="JavaScript/namechange.js"></script>
+    <script src="JavaScript/maximize.js"></script>
+    <script src=""></script>
 </body>
 </html>
