--- a/tasksection.html
+++ b/tasksection.html
@@ -38,7 +38,7 @@
         </div>
         <div class="userdata">
             <h1 class="name" title="Click to edit">User</h1>
-            <img src="Images/profile.jpg" alt="profile" class="pfp">
+            <img src="Images/profile.jpg" alt="profile" class="pfp" title="Click to edit">
         </div>
     </nav>
 
@@ -47,6 +47,8 @@
             <a href="tasksection.html">Tasks</a><hr>
             <a href="completedtasksection.html">Completeted tasks</a><hr>
             <a href="FocusSection.html">Focus</a><hr>
+
+            <div class="divclear"><button class="cleardata">Clear data</button></div>
     </nav>
 
     <!--For name changing feature-->
@@ -64,5 +66,6 @@
     </div>
     <!--Script calling space:-->
     <script src="JavaScript/namechange.js"></script>
+    <script src="JavaScript/cleardata.js"></script>
 </body>
 </html>
