--- a/completedtasksection.html
+++ b/completedtasksection.html
@@ -46,7 +46,10 @@
             <a href="tasksection.html">Tasks</a><hr>
             <a href="completedtasksection.html">Completed tasks</a><hr>
             <a href="FocusSection.html">Focus</a><hr>
-    </nav>
+
+            <div class="divclear"><button class="cleardata">Clear data</button></div>
+
+        </nav>
 
     <!--For name changing feature-->
     <div class="overview">
@@ -63,5 +66,6 @@
     </div>
     <!--Script calling space:-->
     <script src="JavaScript/namechange.js"></script>
+    <script src="JavaScript/cleardata.js"></script>
 </body>
 </html>
