Maybe the last commit of 10/19/2025

--- a/FocusSection.html
+++ b/FocusSection.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="CSS/nav1.css">
     <link rel="stylesheet" href="CSS/nav2.css">
     <link rel="stylesheet" href="CSS/namechange.css">
-    <link rel="stylesheet" href="focussection.css">
+    <link rel="stylesheet" href="Focusfile/focussection.css">
 </head>
 <body>
     <!--Navigation space-->
@@ -50,9 +50,11 @@
     <div class="main">
         <!--Navigation bar 2-->
         <nav class="nav2" id="nav2">
-                <a href="tasksection.html">Tasks</a><hr>
-                <a href="completedtasksection.html">Completed tasks</a><hr>
-                <a href="FocusSection.html">Focus</a><hr>
+                <div class="hrefsection">
+                    <a href="tasksection.html">Tasks</a><hr>
+                    <a href="completedtasksection.html">Completed tasks</a><hr>
+                    <a href="FocusSection.html">Focus</a><hr>
+                </div>
 
                 <div class="divclear"><button class="cleardata">Clear data</button></div>
         </nav>
