--- a/tasksection.html
+++ b/tasksection.html
@@ -22,6 +22,11 @@
 
             margin-top: -20px;
         }
+        .main{
+            display: flex;
+
+            height: 100%;
+        }
     </style>
     <!--CSS link section-->
     <link rel="stylesheet" href="CSS/nav1.css">
@@ -42,27 +47,29 @@
         </div>
     </nav>
 
-    <!--Navigation bar 2-->
-    <nav class="nav2" id="nav2">
-            <a href="tasksection.html">Tasks</a><hr>
-            <a href="completedtasksection.html">Completeted tasks</a><hr>
-            <a href="FocusSection.html">Focus</a><hr>
-
-            <div class="divclear"><button class="cleardata">Clear data</button></div>
-    </nav>
-
-    <!--For name changing feature-->
-    <div class="overview">
-    <div class="namechange">
-        <form action="">
-            <label for="namechange" class="namechangetxt">Enter your name</label><br>   
-            <input type="text" name="namechange" class="namechangeinput" placeholder="User">
-        </form>
-        <div class="confirm">
-            <button class="okay" onclick="changename()">Okay</button>
-            <button class="cancel" onclick="remove()">Cancel</button>
+    <div class="main">
+        <!--Navigation bar 2-->
+        <nav class="nav2" id="nav2">
+                <div class="hrefsection">
+                    <a href="tasksection.html">Tasks</a><hr>
+                    <a href="completedtasksection.html">Completed tasks</a><hr>
+                    <a href="FocusSection.html">Focus</a><hr>
+                </div>
+                <div class="divclear"><button class="cleardata">Clear data</button></div>
+        </nav>
+        <!--For name changing feature-->
+        <div class="overview">
+        <div class="namechange">
+            <form action="">
+                <label for="namechange" class="namechangetxt">Enter your name</label><br>
+                <input type="text" name="namechange" class="namechangeinput" placeholder="User">
+            </form>
+            <div class="confirm">
+                <button class="okay" onclick="changename()">Okay</button>
+                <button class="cancel" onclick="remove()">Cancel</button>
+            </div>
         </div>
-    </div>
+        </div>
     </div>
     <!--Script calling space:-->
     <script src="JavaScript/namechange.js"></script>
