--- a/completedtasksection.html
+++ b/completedtasksection.html
@@ -73,7 +73,7 @@
         <!--Main section-->
             <div class="completedsection">
                 <div class="focusedtimedisplaysection">
-                    <h1 class="timetxt">Focused Total:</h1>
+                    <h1 class="timetxt">Focused: </h1>
                     <h1 class="time">0hr</h1>
                 </div>
             </div>
