To solve a problem

--- a/tasksection.html
+++ b/tasksection.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="actualdisplaysection">
-                    <p>Task:</p>
+                    <p id="taskdisplay">Task:</p>
                 </div>
             </div>
         </div>
