New change for main

--- a/tasksection.html
+++ b/tasksection.html
@@ -107,5 +107,6 @@
     <script src="JavaScript/cleardata.js"></script>
     <script src="JavaScript/appendtask.js"></script>
     <script src="JavaScript/edit.js"></script>
+    <script src="JavaScript/removetask.js"></script>
 </body>
 </html>
