--- a/completedtasksection.html
+++ b/completedtasksection.html
@@ -71,12 +71,26 @@
         </div>
         </div>
         <!--Main section-->
-            <div class="completedsection">
-                <div class="focusedtimedisplaysection">
-                    <h1 class="timetxt">Focused: </h1>
-                    <h1 class="time">0hr</h1>
+            <main class="completedsection">
+                <div class="infosection">
+                    <div class="focusedtimedisplaysection">
+                        <h1 class="time">0hr</h1>
+                        <h1 class="timetxt">Focused</h1>
+                    </div>
+                    <div class="taskleftsection">
+                        <h1 class="task">0</h1>
+                        <h1 class="tasktxt">Tasks Left</h1>
+                    </div>
+                    <div class="taskcompleted">
+                        <h1 class="completedtask">0</h1>
+                        <h1 class="completedtasktxt">Completed</h1>
+                    </div>
                 </div>
-            </div>
+
+                <div class="completedtaskdisplaysection">
+                    <p>Completed tasks</p>
+                </div>
+            </main> 
     </div>
 
     <!--Script calling space:-->
