Final commit of 10/24

--- a/completedtasksection.html
+++ b/completedtasksection.html
@@ -97,5 +97,6 @@
     <script src="JavaScript/namechange.js"></script>
     <script src="JavaScript/cleardata.js"></script>
     <script src="JavaScript/focustime.js"></script>
+    <script src="JavaScript/completed.js"></script>
 </body>
 </html>
