--- a/tasksection.html
+++ b/tasksection.html
@@ -108,5 +108,6 @@
     <script src="JavaScript/appendtask.js"></script>
     <script src="JavaScript/edit.js"></script>
     <script src="JavaScript/removetask.js"></script>
+    <script src="JavaScript/completed.js"></script>
 </body>
 </html>
