Maybe the finishing touches

--- a/completedtasksection.html
+++ b/completedtasksection.html
@@ -101,5 +101,6 @@
     <script src="JavaScript/cleardata.js"></script>
     <script src="JavaScript/focustime.js"></script>
     <script src="JavaScript/completeddisplay.js"></script>
+    <script src="JavaScript/removecompleted.js"></script>
 </body>
 </html>
