final commit for learning utsav

--- a/completedtasksection.html
+++ b/completedtasksection.html
@@ -78,11 +78,11 @@
                         <h1 class="timetxt">Focused</h1>
                     </div>
                     <div class="taskleftsection">
-                        <h1 class="taskno">0</h1>
+                        <h1 class="taskno">XX</h1>
                         <h1 class="tasktxt">Tasks Left</h1>
                     </div>
                     <div class="taskcompleted">
-                        <h1 class="completedtask">0</h1>
+                        <h1 class="completedtask">XX</h1>
                         <h1 class="completedtasktxt">Completed</h1>
                     </div>
                 </div>
