--- a/completedtasksection.html
+++ b/completedtasksection.html
@@ -78,7 +78,7 @@
                         <h1 class="timetxt">Focused</h1>
                     </div>
                     <div class="taskleftsection">
-                        <h1 class="taskno">XX</h1>
+                        <h1 class="taskno">0</h1>
                         <h1 class="tasktxt">Tasks Left</h1>
                     </div>
                     <div class="taskcompleted">
