--- a/completedtasksection.html
+++ b/completedtasksection.html
@@ -82,7 +82,7 @@
                         <h1 class="tasktxt">Tasks Left</h1>
                     </div>
                     <div class="taskcompleted">
-                        <h1 class="completedtask">XX</h1>
+                        <h1 class="completedtask">0</h1>
                         <h1 class="completedtasktxt">Completed</h1>
                     </div>
                 </div>
